--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
-  font_awesome_flutter: ^8.8.1
   http: ^0.12.2
-  intl: ^0.16.1
-  modal_progress_hud: ^0.1.3
-  loading_animations: ^2.1.0
+  provider: ^4.3.2+2
+  
 
 dev_dependencies:
   flutter_test:
@@ -29,11 +27,9 @@ flutter:
   
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+  - images/
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
