--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: hoop
-description: NBA app to keep up with all the live action from the Bubble
-
+description: NBA app to keep up with all the live action from the NBA
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -16,42 +15,15 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.2
   provider: ^4.3.2+2
-  
+  cached_network_image: ^2.3.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
-
-  
   uses-material-design: true
 
   assets:
   - images/
     
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
