--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^0.12.2
   provider: ^4.3.2+2
   cached_network_image: ^2.3.3
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
