--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^4.3.2+2
   cached_network_image: ^2.3.3
   url_launcher: ^5.7.10
+  splashscreen: ^1.3.3
 
 dev_dependencies:
   flutter_test:
