--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cached_network_image: ^2.3.3
   url_launcher: ^5.7.10
   splashscreen: ^1.3.3
+  intl: ^0.16.1
+
 
 dev_dependencies:
   flutter_test:
